# sdkey-rust

./: Cargo.toml  PROTOCOL.md  README.md
.github/workflows/: publish.yml
examples/: basic.rs
src/: client.rs  errors.rs  hwid.rs  lib.rs  types.rs
src/crypto/: canonical_json.rs  constants.rs  encoding.rs  mod.rs  seal.rs
tests/: client_test.rs
